<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">


    <LinearLayout
        android:id="@+id/user_info_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="horizontal|vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/infoName"
                android:layout_margin="5dp"
                android:layout_width="369dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingExtra="10sp"
                android:text="@string/userInfoName"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="10pt"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/infoSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/userInfoSurname"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="10pt"
                android:textStyle="bold"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/infoNameInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/user_inputs"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:hint="Adınızı Giriniz"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:layout_margin="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorPrimaryDark"></EditText>

            <EditText
                android:id="@+id/infoSurnameInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/user_inputs"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:hint="Soyadınız Giriniz"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:layout_margin="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorPrimaryDark"></EditText>
        </LinearLayout>

        <TextView
            android:id="@+id/infoGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="10sp"
            android:text="@string/userInfoGender"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="10pt"
            android:textStyle="bold"></TextView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/infoGenderInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/infoGenderInputMan"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/infoGenderInputMan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.62"
                    android:text="ERKEK" />

                <RadioButton
                    android:id="@+id/infoGenderInputWoman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.47"
                    android:text="KADIN" />
            </RadioGroup>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/infoAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/userInfoAge"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="10pt"
                android:layout_margin="5dp"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/infoAgeInput"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/user_inputs"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:hint="Yaşınızı Giriniz"
                android:inputType="number"
                android:textAlignment="center"
                android:layout_margin="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorPrimaryDark"></EditText>

            <TextView
                android:id="@+id/infoHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/userInfoHeight"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="10pt"
                android:layout_margin="5dp"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/infoHeightInput"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/user_inputs"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:hint="Boyunuzu Giriniz"
                android:inputType="number"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorPrimaryDark"></EditText>
            <TextView
                android:id="@+id/infoWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/userInfoWeight"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="10pt"
                android:layout_margin="5dp"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/infoWeightInput"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/user_inputs"

                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:hint="Kilonuzu Giriniz"
                android:inputType="number"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorPrimaryDark"></EditText>

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Doğum Tarihi"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="10pt"

            android:textStyle="bold"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/infoBirthDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/userInfoBirthDay"
                android:textAlignment="center"
                android:layout_margin="5dp"
                android:textColor="@android:color/background_dark"
                android:textSize="8pt"
                android:textStyle="bold"></TextView>

            <Spinner
                android:id="@+id/infoBirthDayInput"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/user_inputs"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/infoBirthMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/userInfoBirthMonth"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:layout_margin="5dp"
                android:textSize="8pt"
                android:textStyle="bold"></TextView>

            <Spinner
                android:id="@+id/infoBirthMonthInput"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/user_inputs"
                android:textAlignment="center"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/infoBirthYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/userInfoBirthYear"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:layout_margin="5dp"
                android:textSize="8pt"
                android:textStyle="bold"></TextView>

            <Spinner
                android:id="@+id/infoBirthYearInput"
                android:layout_width="200dp"
                android:textAlignment="center"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/user_inputs"
                android:layout_weight="1" />

        </LinearLayout>

        <Button
            android:id="@+id/infoContinueButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:text="TAMAM"
            android:background="@drawable/mybutton2"
            android:textSize="30sp" />

    </LinearLayout>
</ScrollView>

